--- a/starting/styles.css
+++ b/starting/styles.css
@@ -5,6 +5,15 @@ html {
     font-family: 'Poppins', Arial;
 }
 
+@media only screen and (max-width: 1157px) {
+    html {
+        font-size: 12px;
+        background-color: #ffd166;
+        color: #073b4c;
+        font-family: 'Poppins', Arial;
+    }
+}
+
 body {
     margin:0;
 }
@@ -16,7 +25,7 @@ nav {
 }
 
 nav p {
-    margin: 5px 1.5rem;
+    margin: 5px 1rem;
     padding: 1rem;
     display:inline-block;
     font-size: 1rem;
@@ -38,6 +47,26 @@ h1 {
     padding: 2rem;
 }
 
+.images-container {
+    margin: 2rem;
+    text-align: center;
+}
+
+
+.images-container img {
+    display: inline-block;
+    max-width: 33%;
+    margin: 0 auto;
+}
+
+@media only screen and (max-width: 1157px) {
+    .images-container img {
+        display: block;
+        max-width: 100%;
+        margin: 20px auto;
+    }
+}
+
 .quote-container {
     background-color: #06d6a0;
     padding: 2rem;
@@ -57,3 +86,4 @@ h1 {
     width: 50%;
     height: auto;
 }
+
